fixed company page prev commit and made quote a bit wider to stop desktop wrap

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -565,7 +565,7 @@ body{
       }
 
       @media @small-query{
-        padding:0 15% 3em * 0.7;
+        padding:0 14% 3em * 0.7;
       }
     }
   }
